# ossms

./: .gitignore  BACKUP_GUIDE.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  EMAIL_SETUP.md  LICENSE  LOGO_LICENSE.md  README.md  build-production.ps1  build.ps1  build.sh  next.config.mjs  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
app/: globals.css  layout.tsx  page.tsx
app/(dashboard)/: layout.tsx
app/(dashboard)/dashboard/: page.tsx
app/(dashboard)/inventory/: page.tsx
app/(dashboard)/inventory/add-item/: page.tsx
app/(dashboard)/inventory/view-items/: page.tsx
app/(dashboard)/item-history/: page.tsx
app/(dashboard)/item-history/dashboard/: page.tsx
app/(dashboard)/items/create/: page.tsx
app/forgot-password/: page.tsx
app/reset-password/: page.tsx
components/: DevStorageClear.tsx  create-item-form.tsx  dashboard-sidebar.tsx  item-details.tsx  items-table.tsx  loading-spinner.tsx  page-transition.tsx  permission-guard.tsx  update-item-dialog.tsx  update-user-dialog.tsx
components/services/: tauriApiService.ts
components/ui/: alert.tsx  api-error-alert.tsx  badge.tsx  button.tsx  calendar.tsx  card.tsx  chart.tsx  date-range-picker.tsx  dialog.tsx  input.tsx  sheet.tsx  table.tsx
hooks/: use-api.ts  use-auth.ts
lib/: actions.ts  animations.ts  category-utils.ts  mock-data.ts  mock-store.ts  permissions.ts  utils.ts  variation-utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: database.rs  lib.rs  main.rs
(+5 files in other folders)
